--- a/config.json
+++ b/config.json
@@ -9,12 +9,12 @@
 "showAds": true,
 "gNativeId": "ca-app-pub-3940256099942544/2247696110",
 "gBannerId": "ca-app-pub-3982545930608772/1632488083",
-"gAppOpenId": "ca-app-pub-3940256099942544/9257395921",
-"gInterstitialId": "ca-app-pub-3940256099942544/1033173712",
+"gAppOpenId": "ca-app-pub-3982545930608772/8006324749",
+"gInterstitialId": "ca-app-pub-3982545930608772/5111217026",
 "interstialClick": 4,
 "backinterstialClick": 0,
 "WhichAppOpen": 0,
-"email": "dreameditor1204@gmail.com",
+"email": "help.goldstone@gmail.com",
 "showBanner": true,
 "showAppOpen": true,
 "showNative": true,
