--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 "clickButtonId": ".Xn_wrmpnaAgB7BQligNB",
 "backButtonId": ".Luw8lK38r3OQwrI1_Mkt,",
 "crezyPlayNowClick": ".MuiButton-root.playNowButton.css-q30huy,",
-"otherButtonId": ".pyOBngxafEnwWKrr93IQ , .qoMYGbBhf9dsbaBGBphh, .J91n1ymJasoch_FZq89b ,.ot-sdk-container",
+"otherButtonId": ".pyOBngxafEnwWKrr93IQ , .qoMYGbBhf9dsbaBGBphh, .J91n1ymJasoch_FZq89b ,.ot-sdk-container,#div-gpt-ad-banner-bottom",
 "url": "",
 "privacyUrl": "https://sites.google.com/view/goldstone-infotech-privacy/home",
 "showAds": false,
